# BodyTracker

./: CMAKE  CMakeLists.txt
Inc/: KCF_BP_Kalman_Tracker.h  MyObjDetect.h
Src/: DIPproject.cpp  KCF_BP_Kalman_Tracker.cpp  MyObjDetect.cpp  ex2.cpp  ex3.cpp  main.cpp  text_two.cpp  untitled.cpp
